# autoinst

./: .gitignore  ai_main.py  ai_refiner.py  main.py  pyproject.toml  readme.md  refiner.py
lib/: ai.py  kunst_butcher.py  uploader.py  utils.py
